RESOLVED FIXED178747
WTF: Eliminated PLATFORM checks for HAVE_MACH_EXCEPTIONS
https://bugs.webkit.org/show_bug.cgi?id=178747
Summary WTF: Eliminated PLATFORM checks for HAVE_MACH_EXCEPTIONS
Michael Saboff
Reported 2017-10-24 14:02:28 PDT
The presence of the related include file is sufficient check for Mach exceptions.
Attachments
Patch (1.07 KB, patch)
2017-10-24 14:11 PDT, Michael Saboff
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-24 14:11:28 PDT
Michael Saboff
Comment 2 2017-10-24 14:11:38 PDT
WebKit Commit Bot
Comment 3 2017-10-24 14:48:13 PDT
Comment on attachment 324717 [details] Patch Clearing flags on attachment: 324717 Committed r223926: <https://trac.webkit.org/changeset/223926>
WebKit Commit Bot
Comment 4 2017-10-24 14:48:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.