WTF: Eliminated PLATFORM checks for HAVE_MACH_EXCEPTIONS https://bugs.webkit.org/show_bug.cgi?id=178747

Reviewed by Saam Barati.

Removed unnecessary PLATFORM checks as they can cause build failures
when the include file is present.

* wtf/Platform.h:


Canonical link: https://commits.webkit.org/194922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@223926 268f45cc-cd09-0410-ab3c-d52691b4dbfc