Source/WTF/wtf/Platform.h
@@ -661,7 +661,7 @@
 #define HAVE_READLINE 1
 #define HAVE_SYS_TIMEB_H 1
 
-#if __has_include(<mach/mach_exc.defs>) && !(PLATFORM(WATCHOS) || PLATFORM(APPLETV))
+#if __has_include(<mach/mach_exc.defs>)
 #define HAVE_MACH_EXCEPTIONS 1
 #endif
 
